// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`injector after rails 1`] = `
"
    source 'http://rubygems.org'
    gem 'rails'
    gem 'kamikaze' # added by pinion
    gem 'nokogiri'
    gem 'httparty'

    "
`;

exports[`injector append bottom of file 1`] = `
"
    source 'http://rubygems.org'
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'

    gem 'kamikaze' # added by pinion
    "
`;

exports[`injector at_index 2 (below "source") 1`] = `
"
    source 'http://rubygems.org'
    gem 'kamikaze' # added by pinion
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'

    "
`;

exports[`injector before rails 1`] = `
"
    source 'http://rubygems.org'
    gem 'kamikaze' # added by pinion
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'

    "
`;

exports[`injector correctly interpret multi-line after regex 1`] = `
"
    source 'http://rubygems.org'
    gem 'rails'
    gem 'nokogiri'
    gem 'kamikaze' # added by pinion
    gem 'httparty'

    "
`;

exports[`injector correctly interpret multi-line before regex 1`] = `
"
    source 'http://rubygems.org'
    gem 'kamikaze' # added by pinion
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'

    "
`;

exports[`injector correctly interpret multi-line skip_if regex 1`] = `
"
    source 'http://rubygems.org'
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'

    "
`;

exports[`injector correctly interpret multi-line skipIf regex 1`] = `
"
    source 'http://rubygems.org'
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'
    "
`;

exports[`injector if eof_last is false remove empty line from the end of injection body 1`] = `
"
    source 'http://rubygems.org'
    gem 'rails'
    gem 'kamikaze' # added by pinion
    gem 'nokogiri'
    gem 'httparty'

    "
`;

exports[`injector if eof_last is true insert empty line to injection body 1`] = `
"
    source 'http://rubygems.org'
    gem 'rails'
    gem 'kamikaze' # added by pinion

    gem 'nokogiri'
    gem 'httparty'

    "
`;

exports[`injector if eofLast is false remove empty line from the end of injection body 1`] = `
"
    source 'http://rubygems.org'
    gem 'rails'
    gem 'kamikaze' # added by pinion
    gem 'nokogiri'
    gem 'httparty'
    "
`;

exports[`injector if eofLast is true insert empty line to injection body 1`] = `
"
    source 'http://rubygems.org'
    gem 'rails'
    gem 'kamikaze' # added by pinion

    gem 'nokogiri'
    gem 'httparty'
    "
`;

exports[`injector prepend top of file 1`] = `
"    gem 'kamikaze' # added by pinion

    source 'http://rubygems.org'
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'

    "
`;

exports[`injector skip_if "source" exists 1`] = `
"
    source 'http://rubygems.org'
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'

    "
`;

exports[`injector skipIf "source" exists 1`] = `
"
    source 'http://rubygems.org'
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'
    "
`;
